<resources>

    <string name="app_name">Covid 19</string>
    <string name="enter_your_country_name">Enter your country name</string>
    <string name="json_value">json value</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="corona">Corona</string>
    <string name="case_study">case study of : </string>
    <string name="symptoms">Symptoms</string>
    <string name="see_details">See details</string>
    <string name="contact_near_by_doctor">Contact near by doctor</string>
    <string name="stay_home_stay_safe">Stay Home Stay Safe</string>
    <string name="if_you_face_corona_related_symptoms_then_consult_near_by_doctor">If you face corona related symptoms then consult near by doctor.</string>
    <string name="Symptoms">Symptoms</string>
    <string name="search_btn">search btn</string>
    <string name="sore_throat">sore_throat</string>
    <string name="fever">fever</string>
    <string name="cough">cough</string>
    <string name="runny_nose">runny nose</string>
    <string name="tired">tired</string>
    <string name="headache">headache</string>
    <string name="loading">Loading</string>

</resources>
